[package]
name = "Oxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
# Using 0.13.4 because it's the latest release that passed all the checks
cpal = "0.13.4"
#color-eyre= "0.6.1"
color-eyre = "0.5.11"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"]}
rusqlite = { version = "0.27.0", features = ["bundled"] }