[package]
name = "Oxygen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
# Using 0.13.4 because it's the latest release that passed all the checks
cpal = "0.15.3"
#color-eyre= "0.6.1"
color-eyre = "0.6.3"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"]}
rusqlite = { version = "0.34.0", features = ["bundled"] }
chrono = "0.4.19"
ctrlc = "3.2.1"
audiopus = { version = "0.3.0-rc.0" }
symphonia = { version = "0.5.4", features = ["isomp4", "mp3", "aac"] }
hound = "3.5.1"